fixed static z-index for book-flip

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -122,7 +122,7 @@ input[type="checkbox"] {
   transform-origin: left;
   transform-style: preserve-3d;
   transform: rotateY(0deg);
-  transition: all 0.9s cubic-bezier(0.3, 0.025, 0.155, 1);
+  transition: all 0.55s cubic-bezier(0.3, 0.025, 0.155, 1);
   color: #000;
 }
 
@@ -181,20 +181,20 @@ p{
 
 #c0:checked ~.flip-book #p0 {
   transform: rotateY(-180deg);
-  z-index: 0;
+  z-index: 1;
 }
 
 #c1:checked ~.flip-book #p1 {
   transform: rotateY(-180deg);
-  z-index: 1;
+  z-index: 2;
 }
 
 #c2:checked ~.flip-book #p2 {
   transform: rotateY(-180deg);
-  z-index: 2;
+  z-index: 3;
 }
 
 #c3:checked ~.flip-book #p3 {
   transform: rotateY(-180deg);
-  z-index: 3;
+  z-index: 4;
 }
